--- a/CodeForces/899/.vscode/settings.json
+++ b/CodeForces/899/.vscode/settings.json
@@ -1,6 +1,6 @@
 {
     "files.associations": {
-        "regex": "cpp",
+        "__node_handle": "cpp",
         "__hash_table": "cpp",
         "__split_buffer": "cpp",
         "__tree": "cpp",
@@ -16,10 +16,6 @@
         "unordered_map": "cpp",
         "unordered_set": "cpp",
         "vector": "cpp",
-        "filesystem": "cpp",
-        "iostream": "cpp",
-        "iosfwd": "cpp",
-        "functional": "cpp",
-        "random": "cpp"
+        "filesystem": "cpp"
     }
 }
